--- a/Chrome-Extension/manifest.json
+++ b/Chrome-Extension/manifest.json
@@ -4,8 +4,10 @@
   "version": "0.1",
   "manifest_version": 2,
   "browser_action": {
-    "default_popup": "popup.html"
+    "default_title": "InPrint"
   },
   "background": {
+    "scripts": ["background.js"],
+    "persistent": true
   }
 }
