Node server+chrome hook

--- a/Chrome-Extension/manifest.json
+++ b/Chrome-Extension/manifest.json
@@ -6,6 +6,9 @@
   "browser_action": {
     "default_title": "InPrint"
   },
+  "permissions": [
+      "http://127.0.0.1:3000/"
+  ],
   "background": {
     "scripts": ["background.js"],
     "persistent": true
