--- a/Chrome-Extension/manifest.json
+++ b/Chrome-Extension/manifest.json
@@ -7,7 +7,8 @@
     "default_title": "InPrint"
   },
   "permissions": [
-      "http://127.0.0.1:3000/"
+      "http://127.0.0.1:3000/",
+      "tabs"
   ],
   "background": {
     "scripts": ["background.js"],
