--- a/InPrint/app/src/main/AndroidManifest.xml
+++ b/InPrint/app/src/main/AndroidManifest.xml
@@ -14,9 +14,16 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Activity1"
+            android:label="Fingerprint" >
+        </activity>
+        <activity
+            android:name=".Activity2"
+            android:label="Login" >
         </activity>
     </application>
 
