fingerprint on login

--- a/InPrint/app/src/main/AndroidManifest.xml
+++ b/InPrint/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name=".Activity2"
             android:label="Login" >
         </activity>
+        <activity
+            android:name=".beforeLogins"
+            android:label="iwannasleep">
+        </activity>
     </application>
 
 </manifest>
