--- a/InPrint/app/src/main/AndroidManifest.xml
+++ b/InPrint/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.inprint">
     <uses-feature android:name="android.hardware.fingerprint" />
     <uses-feature android:name="android.permission.USE_BIOMETRIC"/>
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name = "android.permission.USE_FINGERPRINT"/>
     <application
         android:allowBackup="true"
