--- a/InPrint/app/src/main/AndroidManifest.xml
+++ b/InPrint/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
             android:name=".beforeLogins"
             android:label="iwannasleep"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ListCred"
+            android:label="iwannasleep"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
